--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"chalk": "^5.3.0",
 		"discord.js-selfbot-v13": "^3.4.5",
-		"dotenv": "^16.4.7"
+		"dotenv": "^16.4.7",
+		"play-sound": "^1.1.6"
 	}
 }
